This file contains the logs between consecutive releases
********************************************************

Release 0.1.7
==============
- testpypi requires a new version

Release 0.1.6
==============
- Upload Windows version to testpypi

Release 0.1.5
==============
- Remove dist folder before building and uploading to PyPi

Release 0.1.4
==============
- Fix python README and upload to PyPi
- Fix recordRead for deserialization

Release 0.1.3
==============
- Add python package upload

Release 0.1.2
==============
- Add python package generation

Release 0.1.1
==============
- New OptCustom class
- New DbGrid class
- New Neighborhood classes (NeighUnique, NeighBench, NeighImage, NeighMoving replacing Neigh)

Release 0.1.0
==============
- Use CMake 3.19+

Release 0.0.2
==============
- New ENUM Macros + refactoring
- Bug fixed in OptimBinaryCost

Release 0.0.1
==============
This is the first version of the 'gstlearn' C++ Library!
Previous changes are listed in the CHANGELOG file of the Geoslib Library (its ancestor).
For more details, please look at doc/CHANGELOG.Geoslib.
