@@ -1,3 +1,7 @@
+if(NOT BUILD_R)
+  return()
+endif()
+
 # R package name
 set(R_PACKAGE_NAME ${PROJECT_NAME})
 # Beware : the real package name is the PROJECT_NAME (for better import)
