@@ -4,7 +4,7 @@ add_custom_target(build_tests)
 # Add 'check' target for building then running the tests
 add_custom_target(check)
 
-# Define ctest command
+# Define ctest command # TODO : really needed ? (yaml use --target check)
 if (MSVC) # TODO use IS_MULTI_CONFIG
   # Need configuration to be tested
 #  set(MY_CTEST_COMMAND ${CMAKE_CTEST_COMMAND} --verbose -C $<CONFIG>)
@@ -14,14 +14,18 @@ else()
   set(MY_CTEST_COMMAND ${CMAKE_CTEST_COMMAND})
 endif()
 
+# TODO : tests are executed for each directory but mixed
+# TODO : reports are separated
+
 add_subdirectory(data)
 add_subdirectory(cpp)
 add_subdirectory(inter)
+set(CHECK_DEP check_cpp check_data)
 
-# TODO : Make these tests configuration / execution optional
-add_subdirectory(py)
-#add_subdirectory(ipynb)
+if (BUILD_PYTHON)
+  add_subdirectory(py)
+  #add_subdirectory(ipynb)
+  list(APPEND CHECK_DEP check_py)
+endif()
 
-# TODO : tests are executed for each directory but mixed
-# TODO : reports are separated
-add_dependencies(check check_cpp check_data check_py)
+add_dependencies(check ${CHECK_DEP})
